Refactor: migrate to PostgreSQL, update IDs to UUID, standardize BaseResponse, and increase test coverage to 80%
- Migrated database from MySQL to PostgreSQL.
- Changed User and Dosen IDs from Integer to String (UUID).
- Refactored all controllers to return standardized BaseResponse using ResponseUtil.
- Added comprehensive unit tests for services and controllers, achieving >80% coverage.
- Integrated JaCoCo for coverage reporting and SonarQube for analysis.
- Cleaned up unused Swing/GUI classes and resources.
- Added .env support for secrets and updated .gitignore.