@@ -1,6 +1,7 @@
 package com.fasilkom.pengumpulmbkm.controller;
 
 
+import com.fasilkom.pengumpulmbkm.model.response.BaseResponse;
 import com.fasilkom.pengumpulmbkm.model.response.LaporanResponse;
 import com.fasilkom.pengumpulmbkm.model.response.MessageResponse;
 import com.fasilkom.pengumpulmbkm.model.response.TugasAkhirResponse;
@@ -12,6 +13,7 @@ import com.fasilkom.pengumpulmbkm.service.DosenService;
 import com.fasilkom.pengumpulmbkm.service.LaporanService;
 import com.fasilkom.pengumpulmbkm.service.TugasAkhirService;
 import com.fasilkom.pengumpulmbkm.service.UsersService;
+import com.fasilkom.pengumpulmbkm.util.ResponseUtil;
 import io.swagger.v3.oas.annotations.Operation;
 import io.swagger.v3.oas.annotations.Parameter;
 import io.swagger.v3.oas.annotations.media.Content;
@@ -19,7 +21,7 @@ import io.swagger.v3.oas.annotations.media.Schema;
 import io.swagger.v3.oas.annotations.responses.ApiResponse;
 import io.swagger.v3.oas.annotations.responses.ApiResponses;
 import io.swagger.v3.oas.annotations.tags.Tag;
-import org.springframework.beans.factory.annotation.Autowired;
+import lombok.RequiredArgsConstructor;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.MediaType;
 import org.springframework.http.ResponseEntity;
@@ -29,55 +31,54 @@ import org.springframework.web.bind.annotation.*;
 import java.sql.Timestamp;
 import java.time.LocalDateTime;
 import java.util.List;
-import java.util.stream.Collectors;
 
-import static com.fasilkom.pengumpulmbkm.model.Info.AKSES_DITOLAK;
+import com.fasilkom.pengumpulmbkm.util.CommonConstant;
 
 @Tag(name = "6. Dosen", description = "API yang digunakan untuk user yang memiliki role DOSEN")
 @RestController
-@RequestMapping("/dosen")
+@RequiredArgsConstructor
+@RequestMapping("/api/v1/lecturer")
 public class DosenController {
-    @Autowired
-    private DosenService dosenService;
-    @Autowired
-    private UsersService usersService;
-    @Autowired
-    private LaporanService laporanService;
-    @Autowired
-    private TugasAkhirService tugasAkhirService;
+
+    private final DosenService dosenService;
+
+    private final UsersService usersService;
+
+    private final LaporanService laporanService;
+
+    private final TugasAkhirService tugasAkhirService;
 
 
     @Operation(summary = "Verifikasi Laporan MBKM menjadi diterima")
     @ApiResponses(value = {
             @ApiResponse(responseCode = "200", description = "Successfully",
                     content = @Content(mediaType = MediaType.APPLICATION_JSON_VALUE,
-                            schema = @Schema(implementation = LaporanResponse.class))),
-            @ApiResponse(responseCode = "403", description = "Akses Ditolak",
+                            schema = @Schema(implementation = BaseResponse.class))),
+            @ApiResponse(responseCode = "403", description = CommonConstant.AKSES_DITOLAK,
                     content = @Content(mediaType = MediaType.APPLICATION_JSON_VALUE,
-                            schema = @Schema(implementation = MessageResponse.class))),
-            @ApiResponse(responseCode = "404", description = "Not Found",
+                            schema = @Schema(implementation = BaseResponse.class))),
+            @ApiResponse(responseCode = "404", description = CommonConstant.NOT_FOUND,
                     content = @Content(mediaType = MediaType.APPLICATION_JSON_VALUE,
-                            schema = @Schema(implementation = MessageResponse.class))),
+                            schema = @Schema(implementation = BaseResponse.class))),
     })
-    @PostMapping("/verifikasi-laporan-true/{laporanId}")
-    public ResponseEntity<LaporanResponse> verifikasiLaporanTrue(
-            @Parameter(description = "ID Laporan yang ingin diverifikasi", example = "123")
-            @PathVariable("laporanId") Integer laporanId,
+    @PostMapping("/reports/{laporanId}/approve")
+    public ResponseEntity<BaseResponse> verifikasiLaporanTrue(
+            @PathVariable @Parameter(description = "ID Laporan yang ingin diverifikasi", example = "123") Integer laporanId,
             Authentication authentication) {
         Laporan laporan = laporanService.findByLaporanId(laporanId);
         Users users = usersService.findByUsername(authentication.getName());
         Dosen dosen = dosenService.getDosenByUserId(users.getUserId());
         if (laporan == null) {
-            return new ResponseEntity(new MessageResponse("Not Found"), HttpStatus.NOT_FOUND);
+            return ResponseUtil.error(HttpStatus.NOT_FOUND, CommonConstant.NOT_FOUND);
         }
         if (laporan.getDosenId().getDosenId().equals(dosen.getDosenId())) {
             LocalDateTime currentTime = LocalDateTime.now();
             laporan.setVerifikasi(true);
             laporan.setWaktuUpdate(Timestamp.valueOf(currentTime));
             laporanService.saveLaporan(laporan);
-            return new ResponseEntity<>(new LaporanResponse(laporan), HttpStatus.OK);
+            return ResponseUtil.ok(new LaporanResponse(laporan));
         } else
-            return new ResponseEntity(new MessageResponse(AKSES_DITOLAK), HttpStatus.FORBIDDEN);
+            return ResponseUtil.error(HttpStatus.FORBIDDEN, CommonConstant.AKSES_DITOLAK);
 
     }
 
@@ -85,18 +86,17 @@ public class DosenController {
     @ApiResponses(value = {
             @ApiResponse(responseCode = "200", description = "Successfully",
                     content = @Content(mediaType = MediaType.APPLICATION_JSON_VALUE,
-                            schema = @Schema(implementation = LaporanResponse.class))),
-            @ApiResponse(responseCode = "403", description = "Akses Ditolak",
+                            schema = @Schema(implementation = BaseResponse.class))),
+            @ApiResponse(responseCode = "403", description = CommonConstant.AKSES_DITOLAK,
                     content = @Content(mediaType = MediaType.APPLICATION_JSON_VALUE,
-                            schema = @Schema(implementation = MessageResponse.class))),
-            @ApiResponse(responseCode = "404", description = "Not Found",
+                            schema = @Schema(implementation = BaseResponse.class))),
+            @ApiResponse(responseCode = "404", description = CommonConstant.NOT_FOUND,
                     content = @Content(mediaType = MediaType.APPLICATION_JSON_VALUE,
-                            schema = @Schema(implementation = MessageResponse.class)))
+                            schema = @Schema(implementation = BaseResponse.class)))
     })
-    @PostMapping("/verifikasi-laporan-false/{laporanId}")
-    public ResponseEntity<LaporanResponse> verifikasiLaporanFalse(
-            @Parameter(description = "ID Laporan yang ingin diverifikasi", example = "123")
-            @PathVariable("laporanId") Integer laporanId,
+    @PostMapping("/reports/{laporanId}/reject")
+    public ResponseEntity<BaseResponse> verifikasiLaporanFalse(
+            @PathVariable @Parameter(description = "ID Laporan yang ingin diverifikasi", example = "123") Integer laporanId,
             @Parameter(description = "menambahkan catatan", example = "laporan sama seperti sebelumnya")
             @RequestParam("catatan") String catatan,
             Authentication authentication) {
@@ -104,7 +104,7 @@ public class DosenController {
         Users users = usersService.findByUsername(authentication.getName());
         Dosen dosen = dosenService.getDosenByUserId(users.getUserId());
         if (laporan == null) {
-            return new ResponseEntity(new MessageResponse("Not Found"), HttpStatus.NOT_FOUND);
+            return ResponseUtil.error(HttpStatus.NOT_FOUND, CommonConstant.NOT_FOUND);
         }
         if (laporan.getDosenId().getDosenId().equals(dosen.getDosenId())) {
             LocalDateTime currentTime = LocalDateTime.now();
@@ -113,9 +113,9 @@ public class DosenController {
             laporan.setWaktuUpdate(Timestamp.valueOf(currentTime));
             laporanService.saveLaporan(laporan);
 
-            return new ResponseEntity<>(new LaporanResponse(laporan), HttpStatus.OK);
+            return ResponseUtil.ok(new LaporanResponse(laporan));
         } else
-            return new ResponseEntity(new MessageResponse(AKSES_DITOLAK), HttpStatus.FORBIDDEN);
+            return ResponseUtil.error(HttpStatus.FORBIDDEN, CommonConstant.AKSES_DITOLAK);
 
 
     }
@@ -124,33 +124,32 @@ public class DosenController {
     @ApiResponses(value = {
             @ApiResponse(responseCode = "200", description = "Successfully",
                     content = @Content(mediaType = MediaType.APPLICATION_JSON_VALUE,
-                            schema = @Schema(implementation = TugasAkhirResponse.class))),
-            @ApiResponse(responseCode = "403", description = "Akses Ditolak",
+                            schema = @Schema(implementation = BaseResponse.class))),
+            @ApiResponse(responseCode = "403", description = CommonConstant.AKSES_DITOLAK,
                     content = @Content(mediaType = MediaType.APPLICATION_JSON_VALUE,
-                            schema = @Schema(implementation = MessageResponse.class))),
-            @ApiResponse(responseCode = "404", description = "Not Found",
+                            schema = @Schema(implementation = BaseResponse.class))),
+            @ApiResponse(responseCode = "404", description = CommonConstant.NOT_FOUND,
                     content = @Content(mediaType = MediaType.APPLICATION_JSON_VALUE,
-                            schema = @Schema(implementation = MessageResponse.class))),
+                            schema = @Schema(implementation = BaseResponse.class))),
     })
-    @PostMapping("/verifikasi-tugas-akhir-true/{tugasAkhirId}")
-    public ResponseEntity<TugasAkhirResponse> verifikasiTugasAkhirTrue(
-            @Parameter(description = "ID Tugas Akhir yang ingin diverifikasi", example = "123")
-            @PathVariable("tugasAkhirId") Integer tugasAkhirId,
+    @PostMapping("/final-projects/{tugasAkhirId}/approve")
+    public ResponseEntity<BaseResponse> verifikasiTugasAkhirTrue(
+            @PathVariable @Parameter(description = "ID Tugas Akhir yang ingin diverifikasi", example = "123") Integer tugasAkhirId,
             Authentication authentication) {
         TugasAkhir ta = tugasAkhirService.findByTugasAkhirId(tugasAkhirId);
         Users users = usersService.findByUsername(authentication.getName());
         Dosen dosen = dosenService.getDosenByUserId(users.getUserId());
         if (ta == null) {
-            return new ResponseEntity(new MessageResponse("Not Found"), HttpStatus.NOT_FOUND);
+            return ResponseUtil.error(HttpStatus.NOT_FOUND, CommonConstant.NOT_FOUND);
         }
         if (ta.getDosenId().getDosenId().equals(dosen.getDosenId())) {
             LocalDateTime currentTime = LocalDateTime.now();
             ta.setVerifikasi(true);
             ta.setWaktuUpdate(Timestamp.valueOf(currentTime));
             tugasAkhirService.saveTugasAkhir(ta);
-            return new ResponseEntity<>(new TugasAkhirResponse(ta), HttpStatus.OK);
+            return ResponseUtil.ok(new TugasAkhirResponse(ta));
         } else
-            return new ResponseEntity(new MessageResponse(AKSES_DITOLAK), HttpStatus.FORBIDDEN);
+            return ResponseUtil.error(HttpStatus.FORBIDDEN, CommonConstant.AKSES_DITOLAK);
 
 
     }
@@ -159,18 +158,17 @@ public class DosenController {
     @ApiResponses(value = {
             @ApiResponse(responseCode = "200", description = "Successfully",
                     content = @Content(mediaType = MediaType.APPLICATION_JSON_VALUE,
-                            schema = @Schema(implementation = TugasAkhirResponse.class))),
-            @ApiResponse(responseCode = "403", description = "Akses Ditolak",
+                            schema = @Schema(implementation = BaseResponse.class))),
+            @ApiResponse(responseCode = "403", description = CommonConstant.AKSES_DITOLAK,
                     content = @Content(mediaType = MediaType.APPLICATION_JSON_VALUE,
-                            schema = @Schema(implementation = MessageResponse.class))),
-            @ApiResponse(responseCode = "404", description = "Not Found",
+                            schema = @Schema(implementation = BaseResponse.class))),
+            @ApiResponse(responseCode = "404", description = CommonConstant.NOT_FOUND,
                     content = @Content(mediaType = MediaType.APPLICATION_JSON_VALUE,
-                            schema = @Schema(implementation = MessageResponse.class)))
+                            schema = @Schema(implementation = BaseResponse.class)))
     })
-    @PostMapping("/verifikasi-tugas-akhir-false/{tugasAkhirId}")
-    public ResponseEntity<TugasAkhirResponse> verifikasiTugasAkhirFalse(
-            @Parameter(description = "ID Tugas Akhir yang ingin diverifikasi", example = "123")
-            @PathVariable("tugasAkhirId") Integer tugasAkhirId,
+    @PostMapping("/final-projects/{tugasAkhirId}/reject")
+    public ResponseEntity<BaseResponse> verifikasiTugasAkhirFalse(
+            @PathVariable @Parameter(description = "ID Tugas Akhir yang ingin diverifikasi", example = "123") Integer tugasAkhirId,
             @Parameter(description = "menambahakan catatan", example = "gambar pada file laporan tidak jelas")
             @RequestParam("catatan") String catatan,
             Authentication authentication) {
@@ -178,7 +176,7 @@ public class DosenController {
         Users users = usersService.findByUsername(authentication.getName());
         Dosen dosen = dosenService.getDosenByUserId(users.getUserId());
         if (ta == null) {
-            return new ResponseEntity(new MessageResponse("Not Found"), HttpStatus.NOT_FOUND);
+            return ResponseUtil.error(HttpStatus.NOT_FOUND, CommonConstant.NOT_FOUND);
         }
         if (ta.getDosenId().getDosenId().equals(dosen.getDosenId())) {
             LocalDateTime currentTime = LocalDateTime.now();
@@ -187,9 +185,9 @@ public class DosenController {
             ta.setWaktuUpdate(Timestamp.valueOf(currentTime));
             tugasAkhirService.saveTugasAkhir(ta);
 
-            return new ResponseEntity<>(new TugasAkhirResponse(ta), HttpStatus.OK);
+            return ResponseUtil.ok(new TugasAkhirResponse(ta));
         } else
-            return new ResponseEntity(new MessageResponse(AKSES_DITOLAK), HttpStatus.FORBIDDEN);
+            return ResponseUtil.error(HttpStatus.FORBIDDEN, CommonConstant.AKSES_DITOLAK);
 
 
     }
@@ -198,94 +196,92 @@ public class DosenController {
     @ApiResponses(value = {
             @ApiResponse(responseCode = "200", description = "Successfully",
                     content = @Content(mediaType = MediaType.APPLICATION_JSON_VALUE,
-                            schema = @Schema(implementation = TugasAkhirResponse.class)))
+                            schema = @Schema(implementation = BaseResponse.class)))
     })
-    @GetMapping("/list-laporan")
-    public ResponseEntity<LaporanResponse> getLaporanByUserId(
+    @GetMapping("/reports")
+    public ResponseEntity<BaseResponse> getLaporanByUserId(
             Authentication authentication) {
         Users users = usersService.findByUsername(authentication.getName());
         Dosen dosen = dosenService.getDosenByUserId(users.getUserId());
         List<Laporan> laporan = laporanService.findLaporanByDosenId(dosen.getDosenId());
         List<LaporanResponse> taGetResponse =
-                laporan.stream().map(LaporanResponse::new).collect(Collectors.toList());
+                laporan.stream().map(LaporanResponse::new).toList();
 
-        return new ResponseEntity(taGetResponse, HttpStatus.OK);
+        return ResponseUtil.ok(taGetResponse);
     }
 
     @Operation(summary = "menampilkan daftar Tugas Akhir berdasarkan userId dosen ")
     @ApiResponses(value = {
             @ApiResponse(responseCode = "200", description = "Successfully",
                     content = @Content(mediaType = MediaType.APPLICATION_JSON_VALUE,
-                            schema = @Schema(implementation = TugasAkhirResponse.class)))
+                            schema = @Schema(implementation = BaseResponse.class)))
     })
-    @GetMapping("/list-tugas-akhir")
-    public ResponseEntity<TugasAkhirResponse> getTugasAkhirByUserId(
+    @GetMapping("/final-projects")
+    public ResponseEntity<BaseResponse> getTugasAkhirByUserId(
             Authentication authentication) {
         Users users = usersService.findByUsername(authentication.getName());
         Dosen dosen = dosenService.getDosenByUserId(users.getUserId());
         List<TugasAkhir> ta = tugasAkhirService.getTugasAkhirByDosenId(dosen.getDosenId());
         List<TugasAkhirResponse> taGetResponse =
-                ta.stream().map(TugasAkhirResponse::new).collect(Collectors.toList());
+                ta.stream().map(TugasAkhirResponse::new).toList();
 
-        return new ResponseEntity(taGetResponse, HttpStatus.OK);
+        return ResponseUtil.ok(taGetResponse);
     }
 
     @Operation(summary = "menampilkan detail Laporan Tugas Akhir berdasarkan tugasAkhirId")
     @ApiResponses(value = {
             @ApiResponse(responseCode = "200", description = "Successfully",
                     content = @Content(mediaType = MediaType.APPLICATION_JSON_VALUE,
-                            schema = @Schema(implementation = TugasAkhirResponse.class))),
-            @ApiResponse(responseCode = "404", description = "Not Found",
+                            schema = @Schema(implementation = BaseResponse.class))),
+            @ApiResponse(responseCode = "404", description = CommonConstant.NOT_FOUND,
                     content = @Content(mediaType = MediaType.APPLICATION_JSON_VALUE,
-                            schema = @Schema(implementation = MessageResponse.class))),
-            @ApiResponse(responseCode = "403", description = "Akses Ditolak",
+                            schema = @Schema(implementation = BaseResponse.class))),
+            @ApiResponse(responseCode = "403", description = CommonConstant.AKSES_DITOLAK,
                     content = @Content(mediaType = MediaType.APPLICATION_JSON_VALUE,
-                            schema = @Schema(implementation = MessageResponse.class)))
+                            schema = @Schema(implementation = BaseResponse.class)))
     })
-    @GetMapping("/detail-tugas-akhir/{tugasAkhirId}")
-    public ResponseEntity<TugasAkhirResponse> getDetailTugasAkhirById(
-            @Parameter(description = "ID Tugas Akhir yang ingin ditampilkan", example = "123")
-            @PathVariable("tugasAkhirId") Integer tugasAkhirId,
+    @GetMapping("/final-projects/{tugasAkhirId}")
+    public ResponseEntity<BaseResponse> getDetailTugasAkhirById(
+            @PathVariable @Parameter(description = "ID Tugas Akhir yang ingin ditampilkan", example = "123") Integer tugasAkhirId,
             Authentication authentication) {
         TugasAkhir ta = tugasAkhirService.findByTugasAkhirId(tugasAkhirId);
         Users users = usersService.findByUsername(authentication.getName());
         Dosen dosen = dosenService.getDosenByUserId(users.getUserId());
         if (ta == null) {
-            return new ResponseEntity(new MessageResponse("Not Found"), HttpStatus.NOT_FOUND);
+            return ResponseUtil.error(HttpStatus.NOT_FOUND, CommonConstant.NOT_FOUND);
         }
         if (ta.getDosenId().getDosenId().equals(dosen.getDosenId())) {
-            return new ResponseEntity<>(new TugasAkhirResponse(ta), HttpStatus.OK);
+            return ResponseUtil.ok(new TugasAkhirResponse(ta));
         } else
-            return new ResponseEntity(new MessageResponse(AKSES_DITOLAK), HttpStatus.FORBIDDEN);
+            return ResponseUtil.error(HttpStatus.FORBIDDEN, CommonConstant.AKSES_DITOLAK);
     }
 
     @Operation(summary = "menampilkan detail Laporan berdasarkan laporanId")
     @ApiResponses(value = {
             @ApiResponse(responseCode = "200", description = "Successfully",
                     content = @Content(mediaType = MediaType.APPLICATION_JSON_VALUE,
-                            schema = @Schema(implementation = LaporanResponse.class))),
-            @ApiResponse(responseCode = "404", description = "Not Found",
+                            schema = @Schema(implementation = BaseResponse.class))),
+            @ApiResponse(responseCode = "404", description = CommonConstant.NOT_FOUND,
                     content = @Content(mediaType = MediaType.APPLICATION_JSON_VALUE,
-                            schema = @Schema(implementation = MessageResponse.class))),
-            @ApiResponse(responseCode = "403", description = "Akses Ditolak",
+                            schema = @Schema(implementation = BaseResponse.class))),
+            @ApiResponse(responseCode = "403", description = CommonConstant.AKSES_DITOLAK,
                     content = @Content(mediaType = MediaType.APPLICATION_JSON_VALUE,
-                            schema = @Schema(implementation = MessageResponse.class)))
+                            schema = @Schema(implementation = BaseResponse.class)))
     })
-    @GetMapping("/detail-laporan/{laporanId}")
-    public ResponseEntity<LaporanResponse> getDetailLaporanById(
-            @Parameter(description = "ID Tugas Akhir yang ingin ditampilkan", example = "123")
-            @PathVariable("laporanId") Integer laporanId,
+    @GetMapping("/reports/{laporanId}")
+    public ResponseEntity<BaseResponse> getDetailLaporanById(
+            @PathVariable @Parameter(description = "ID Tugas Akhir yang ingin ditampilkan", example = "123") Integer laporanId,
             Authentication authentication) {
         Laporan laporan = laporanService.findByLaporanId(laporanId);
         Users users = usersService.findByUsername(authentication.getName());
         Dosen dosen = dosenService.getDosenByUserId(users.getUserId());
         if (laporan == null) {
-            return new ResponseEntity(new MessageResponse("Not Found"), HttpStatus.NOT_FOUND);
+            return ResponseUtil.error(HttpStatus.NOT_FOUND, CommonConstant.NOT_FOUND);
         }
         if (laporan.getDosenId().getDosenId().equals(dosen.getDosenId())) {
-            return new ResponseEntity<>(new LaporanResponse(laporan), HttpStatus.OK);
+            return ResponseUtil.ok(new LaporanResponse(laporan));
         }
-        return new ResponseEntity(new MessageResponse(AKSES_DITOLAK), HttpStatus.FORBIDDEN);
+        return ResponseUtil.error(HttpStatus.FORBIDDEN, CommonConstant.AKSES_DITOLAK);
     }
 
 }
