@@ -1,16 +1,15 @@
 package com.fasilkom.pengumpulmbkm.controller;
 
-import com.fasilkom.pengumpulmbkm.config.AuthEntryPointJwt;
+import com.fasilkom.pengumpulmbkm.util.CommonConstant;
+import com.fasilkom.pengumpulmbkm.model.response.BaseResponse;
 import com.fasilkom.pengumpulmbkm.model.response.LaporanResponse;
 import com.fasilkom.pengumpulmbkm.model.response.MessageResponse;
-import com.fasilkom.pengumpulmbkm.model.roles.Program;
 import com.fasilkom.pengumpulmbkm.model.tugas.Laporan;
-import com.fasilkom.pengumpulmbkm.model.users.Dosen;
 import com.fasilkom.pengumpulmbkm.model.users.Users;
-import com.fasilkom.pengumpulmbkm.service.DosenService;
 import com.fasilkom.pengumpulmbkm.service.LaporanService;
-import com.fasilkom.pengumpulmbkm.service.ProgramService;
 import com.fasilkom.pengumpulmbkm.service.UsersService;
+import com.fasilkom.pengumpulmbkm.util.ResponseUtil;
+import com.yahya.commonlogger.StructuredLogger;
 import io.swagger.v3.oas.annotations.Operation;
 import io.swagger.v3.oas.annotations.Parameter;
 import io.swagger.v3.oas.annotations.media.Content;
@@ -18,57 +17,50 @@ import io.swagger.v3.oas.annotations.media.Schema;
 import io.swagger.v3.oas.annotations.responses.ApiResponse;
 import io.swagger.v3.oas.annotations.responses.ApiResponses;
 import io.swagger.v3.oas.annotations.tags.Tag;
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
-import org.springframework.beans.factory.annotation.Autowired;
+import lombok.RequiredArgsConstructor;
+import org.springframework.boot.logging.LogLevel;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.MediaType;
 import org.springframework.http.ResponseEntity;
+import org.springframework.security.access.AccessDeniedException;
 import org.springframework.security.core.Authentication;
 import org.springframework.web.bind.annotation.*;
 
-import javax.validation.constraints.NotBlank;
-import javax.validation.constraints.NotNull;
-import java.sql.Timestamp;
-import java.time.LocalDateTime;
-import java.util.List;
-import java.util.stream.Collectors;
+import jakarta.validation.constraints.NotBlank;
 
-import static com.fasilkom.pengumpulmbkm.model.Info.*;
+import java.util.List;
+
+import static com.fasilkom.pengumpulmbkm.util.CommonConstant.*;
 
 @Tag(name = "4. Laporan MBKM",
-        description = "API yang digunakan oleh role MAHASISWA untuk dapat melakukan CRUD pada entity Laporan")
+        description = "API yang digunakan oleh role MAHASISWA for CRUD on entity Laporan")
 @RestController
-@RequestMapping("/mahasiswa/laporan")
+@RequiredArgsConstructor
+@RequestMapping("/api/v1")
 public class LaporanController {
-    private static final Logger LOG = LoggerFactory.getLogger(LaporanController.class);
 
-    @Autowired
-    private UsersService usersService;
-    @Autowired
-    private DosenService dosenService;
-    @Autowired
-    private LaporanService laporanService;
-    @Autowired
-    private ProgramService programService;
+
+    private final StructuredLogger structuredLogger;
+    private final UsersService usersService;
+    private final LaporanService laporanService;
 
     @Operation(summary = "melakukan Upload Laporan")
     @ApiResponses(value = {
             @ApiResponse(responseCode = "200", description = "Successfully",
                     content = @Content(mediaType = MediaType.APPLICATION_JSON_VALUE,
-                            schema = @Schema(implementation = LaporanResponse.class))),
-            @ApiResponse(responseCode = "404", description = "Not Found",
+                            schema = @Schema(implementation = BaseResponse.class))),
+            @ApiResponse(responseCode = "404", description = CommonConstant.NOT_FOUND,
                     content = @Content(mediaType = MediaType.APPLICATION_JSON_VALUE,
-                            schema = @Schema(implementation = MessageResponse.class))),
+                            schema = @Schema(implementation = BaseResponse.class))),
             @ApiResponse(responseCode = "500", description = "Internal Server Error",
                     content = @Content(mediaType = MediaType.APPLICATION_JSON_VALUE,
-                            schema = @Schema(implementation = MessageResponse.class)))
+                            schema = @Schema(implementation = BaseResponse.class)))
     })
-    @PostMapping("/upload-laporan")
-    public ResponseEntity<LaporanResponse> uploadLaporan(
+    @PostMapping("/reports")
+    public ResponseEntity<BaseResponse> uploadLaporan(
             @Parameter(description = "Masukan ID dosen sesuai dengan SK", example = "123")
             @NotBlank(message = "dosenId cannot be null")
-            @RequestParam("dosenId") Integer dosenId,
+            @RequestParam("dosenId") String dosenId,
             @Parameter(description = "Menambahkan Laporan", example = "hac verterem curae impetus aenean")
             @RequestParam("laporan") String laporanMBKM,
             @Parameter(description = "Masukan Program ID sesuai yang diikuti", example = "123")
@@ -76,29 +68,20 @@ public class LaporanController {
             Authentication authentication) {
         try {
             Users user = usersService.findByUsername(authentication.getName());
-            Laporan laporan = new Laporan();
-            Users users = usersService.findByUserId(user.getUserId());
-            Dosen dosen = dosenService.getDosenByDosenId(dosenId);
-            if (dosen == null) {
-                return new ResponseEntity(new MessageResponse("Dosen Not Found"), HttpStatus.NOT_FOUND);
-            }
-            Program program = programService.findByProgramid(programId);
-            if (program == null) {
-                return new ResponseEntity(new MessageResponse("Program MBKM Not Found"), HttpStatus.NOT_FOUND);
-            }
-            LocalDateTime currentTime = LocalDateTime.now();
-            laporan.setUserId(users);
-            laporan.setDosenId(dosen);
-            laporan.setProgramId(program);
-            laporan.setLaporan(laporanMBKM);
-            laporan.setVerifikasi(null);
-            laporan.setWaktuPengumpulan(Timestamp.valueOf(currentTime));
-            laporanService.saveLaporan(laporan);
+            Laporan laporan = laporanService.uploadLaporan(dosenId, laporanMBKM, programId, user);
 
-            return new ResponseEntity(new LaporanResponse(laporan), HttpStatus.OK);
+            structuredLogger.newLog()
+                    .withLogLevel(LogLevel.INFO)
+                    .onSuccess(laporan, 0);
+
+            return ResponseUtil.ok(new LaporanResponse(laporan));
+        } catch (IllegalArgumentException e) {
+            return ResponseUtil.error(HttpStatus.NOT_FOUND, e.getMessage());
         } catch (Exception e) {
-            LOG.error(String.valueOf(e));
-            return new ResponseEntity(new MessageResponse("Internal Server Error"), HttpStatus.INTERNAL_SERVER_ERROR);
+            structuredLogger.newLog()
+                    .withLogLevel(LogLevel.ERROR)
+                    .onFailure(e, 0);
+            return ResponseUtil.error(HttpStatus.INTERNAL_SERVER_ERROR, "Internal Server Error");
         }
     }
 
@@ -106,16 +89,16 @@ public class LaporanController {
     @ApiResponses(value = {
             @ApiResponse(responseCode = "200", description = "Successfully",
                     content = @Content(mediaType = MediaType.APPLICATION_JSON_VALUE,
-                            schema = @Schema(implementation = LaporanResponse.class))),
-            @ApiResponse(responseCode = "404", description = "Not Found",
+                            schema = @Schema(implementation = BaseResponse.class))),
+            @ApiResponse(responseCode = "404", description = CommonConstant.NOT_FOUND,
                     content = @Content(mediaType = MediaType.APPLICATION_JSON_VALUE,
-                            schema = @Schema(implementation = MessageResponse.class))),
-            @ApiResponse(responseCode = "403", description = "Akses Ditolak",
+                            schema = @Schema(implementation = BaseResponse.class))),
+            @ApiResponse(responseCode = "403", description = CommonConstant.AKSES_DITOLAK,
                     content = @Content(mediaType = MediaType.APPLICATION_JSON_VALUE,
-                            schema = @Schema(implementation = MessageResponse.class)))
+                            schema = @Schema(implementation = BaseResponse.class)))
     })
-    @PostMapping("/update-laporan/{laporanId}")
-    public ResponseEntity<LaporanResponse> updatelaporan(
+    @PutMapping("/reports/{laporanId}")
+    public ResponseEntity<BaseResponse> updatelaporan(
             @Parameter(description = "ID Laporan", example = "123")
             @PathVariable("laporanId") Integer laporanId,
             @Parameter(description = "Isi laporan", example = "consetetur elit sed ubique ferri")
@@ -124,76 +107,72 @@ public class LaporanController {
             @RequestParam("program_id") Integer programId,
             Authentication authentication
     ) {
-        LocalDateTime currentTime = LocalDateTime.now();
-        Laporan laporanSave = laporanService.findByLaporanId(laporanId);
-        if (laporanSave == null) {
-            return new ResponseEntity(new MessageResponse("Laporan Not Found"), HttpStatus.NOT_FOUND);
-        }
-        Program program = programService.findByProgramid(programId);
-        if (program == null) {
-            return new ResponseEntity(new MessageResponse("Program MBKM Not Found"), HttpStatus.NOT_FOUND);
-        }
-        Users users = usersService.findByUsername(authentication.getName());
-        if (laporanSave.getUserId().getUserId().equals(users.getUserId())) {
-            if (programId != null) {
-                laporanSave.setProgramId(program);
-            }
-            laporanSave.setLaporan(laporan);
-            laporanSave.setWaktuUpdate(Timestamp.valueOf(currentTime));
-            laporanService.saveLaporan(laporanSave);
-            return new ResponseEntity<>(new LaporanResponse(laporanSave), HttpStatus.OK);
-        } else {
-            return new ResponseEntity(new MessageResponse(AKSES_DITOLAK), HttpStatus.FORBIDDEN);
-        }
+        try {
+            Users users = usersService.findByUsername(authentication.getName());
+            Laporan laporanSave = laporanService.updateLaporanBusinessLogic(laporanId, laporan, programId, users);
 
+            structuredLogger.newLog()
+                    .withLogLevel(LogLevel.INFO)
+                    .onSuccess(laporanSave, 0);
+
+            return ResponseUtil.ok(new LaporanResponse(laporanSave));
+        } catch (IllegalArgumentException e) {
+            return ResponseUtil.error(HttpStatus.NOT_FOUND, e.getMessage());
+        } catch (AccessDeniedException e) {
+            return ResponseUtil.error(HttpStatus.FORBIDDEN, e.getMessage());
+        } catch (Exception e) {
+            structuredLogger.newLog()
+                    .withLogLevel(LogLevel.ERROR)
+                    .onFailure(e, 0);
+            return ResponseUtil.error(HttpStatus.INTERNAL_SERVER_ERROR, "Internal Server Error");
+        }
     }
 
     @Operation(summary = "menampilkan daftar Laporan berdasarkan userId")
     @ApiResponses(value = {
             @ApiResponse(responseCode = "200", description = "Successfully",
                     content = @Content(mediaType = MediaType.APPLICATION_JSON_VALUE,
-                            schema = @Schema(implementation = LaporanResponse.class)))
+                            schema = @Schema(implementation = BaseResponse.class)))
     })
-    @GetMapping("/list-laporan")
-    public ResponseEntity<LaporanResponse> getLaporanByUserId(
+    @GetMapping("/reports/me")
+    public ResponseEntity<BaseResponse> getLaporanByUserId(
             Authentication authentication) {
         Users users = usersService.findByUsername(authentication.getName());
         List<Laporan> laporan = laporanService.findLaporanByUserId(users.getUserId());
         List<LaporanResponse> taGetResponse =
-                laporan.stream().map(LaporanResponse::new).collect(Collectors.toList());
+                laporan.stream().map(LaporanResponse::new).toList();
 
-        return new ResponseEntity(taGetResponse, HttpStatus.OK);
+        return ResponseUtil.ok(taGetResponse);
     }
 
     @Operation(summary = "menampilkan detail Laporan ")
     @ApiResponses(value = {
             @ApiResponse(responseCode = "200", description = "Successfully",
                     content = @Content(mediaType = MediaType.APPLICATION_JSON_VALUE,
-                            schema = @Schema(implementation = LaporanResponse.class))),
-            @ApiResponse(responseCode = "404", description = "Not Found",
+                            schema = @Schema(implementation = BaseResponse.class))),
+            @ApiResponse(responseCode = "404", description = CommonConstant.NOT_FOUND,
                     content = @Content(mediaType = MediaType.APPLICATION_JSON_VALUE,
-                            schema = @Schema(implementation = MessageResponse.class))),
-            @ApiResponse(responseCode = "403", description = "Akses Ditolak",
+                            schema = @Schema(implementation = BaseResponse.class))),
+            @ApiResponse(responseCode = "403", description = CommonConstant.AKSES_DITOLAK,
                     content = @Content(mediaType = MediaType.APPLICATION_JSON_VALUE,
-                            schema = @Schema(implementation = MessageResponse.class)))
+                            schema = @Schema(implementation = BaseResponse.class)))
     })
-    @GetMapping("/detail-laporan/{laporanId}")
-    public ResponseEntity<LaporanResponse> getLaporanByid(
-            @Parameter(description = "ID laporan untuk mendapatkan laporan", example = "123")
-            @PathVariable("laporanId") Integer laporanId,
+    @GetMapping("/reports/{laporanId}")
+    public ResponseEntity<BaseResponse> getLaporanByid(
+            @PathVariable @Parameter(description = "ID laporan for mendapatkan laporan", example = "123") Integer laporanId,
             Authentication authentication) {
         try {
             Users users = usersService.findByUsername(authentication.getName());
             Laporan laporan = laporanService.findByLaporanId(laporanId);
             if (laporan == null) {
-                return new ResponseEntity(new MessageResponse("Not Found"), HttpStatus.NOT_FOUND);
+                return ResponseUtil.error(HttpStatus.NOT_FOUND, CommonConstant.NOT_FOUND);
             }
             if (laporan.getUserId().getUserId().equals(users.getUserId())) {
-                return new ResponseEntity<>(new LaporanResponse(laporan), HttpStatus.OK);
+                return ResponseUtil.ok(new LaporanResponse(laporan));
             } else
-                return new ResponseEntity(new MessageResponse(AKSES_DITOLAK), HttpStatus.FORBIDDEN);
+                return ResponseUtil.error(HttpStatus.FORBIDDEN, AKSES_DITOLAK);
         } catch (Exception e) {
-            return new ResponseEntity(new MessageResponse("internal server error " + e), HttpStatus.INTERNAL_SERVER_ERROR);
+            return ResponseUtil.error(HttpStatus.INTERNAL_SERVER_ERROR, "internal server error " + e);
         }
     }
 
