@@ -1,5 +1,7 @@
 package com.fasilkom.pengumpulmbkm.controller;
 
+import com.fasilkom.pengumpulmbkm.util.CommonConstant;
+import com.fasilkom.pengumpulmbkm.model.response.BaseResponse;
 import com.fasilkom.pengumpulmbkm.model.response.MessageResponse;
 import com.fasilkom.pengumpulmbkm.model.response.TugasAkhirGetDetailResponse;
 import com.fasilkom.pengumpulmbkm.model.response.TugasAkhirResponse;
@@ -11,6 +13,7 @@ import com.fasilkom.pengumpulmbkm.service.DosenService;
 import com.fasilkom.pengumpulmbkm.service.ProgramService;
 import com.fasilkom.pengumpulmbkm.service.TugasAkhirService;
 import com.fasilkom.pengumpulmbkm.service.UsersService;
+import com.fasilkom.pengumpulmbkm.util.ResponseUtil;
 import io.swagger.v3.oas.annotations.Operation;
 import io.swagger.v3.oas.annotations.Parameter;
 import io.swagger.v3.oas.annotations.media.Content;
@@ -18,9 +21,7 @@ import io.swagger.v3.oas.annotations.media.Schema;
 import io.swagger.v3.oas.annotations.responses.ApiResponse;
 import io.swagger.v3.oas.annotations.responses.ApiResponses;
 import io.swagger.v3.oas.annotations.tags.Tag;
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
-import org.springframework.beans.factory.annotation.Autowired;
+import lombok.RequiredArgsConstructor;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.MediaType;
 import org.springframework.http.ResponseEntity;
@@ -29,50 +30,45 @@ import org.springframework.web.bind.annotation.*;
 import org.springframework.web.multipart.MultipartFile;
 
 
-import javax.validation.constraints.NotBlank;
-import javax.validation.constraints.NotNull;
+import jakarta.validation.constraints.NotBlank;
+import jakarta.validation.constraints.NotNull;
 import java.io.IOException;
 
 import java.sql.Timestamp;
 import java.time.LocalDateTime;
 import java.util.List;
-import java.util.stream.Collectors;
 
-import static com.fasilkom.pengumpulmbkm.model.Info.AKSES_DITOLAK;
+import static com.fasilkom.pengumpulmbkm.util.CommonConstant.*;
 
 @Tag(name = "5. Tugas Akhir MBKM",
         description = "API yang digunakan oleh role MAHASISWA untuk dapat melakukan CRUD pada entity Tugas Akhir")
 @RestController
-@RequestMapping("/mahasiswa/tugas-akhir")
+@RequiredArgsConstructor
+@RequestMapping("/api/v1")
 public class TugasAkhirController {
 
-    @Autowired
-    private UsersService usersService;
-    @Autowired
-    private DosenService dosenService;
-    @Autowired
-    private ProgramService programService;
-    @Autowired
-    private TugasAkhirService tugasAkhirService;
-    private static final Logger LOG = LoggerFactory.getLogger(LaporanController.class);
+    private final UsersService usersService;
+    private final DosenService dosenService;
+    private final ProgramService programService;
+    private final TugasAkhirService tugasAkhirService;
 
     @Operation(summary = "Melakukan Upload Tugas Akhir")
     @ApiResponses(value = {
             @ApiResponse(responseCode = "200", description = "Successfully",
                     content = @Content(mediaType = MediaType.APPLICATION_JSON_VALUE,
-                            schema = @Schema(implementation = TugasAkhirResponse.class))),
-            @ApiResponse(responseCode = "404", description = "Not Found",
+                            schema = @Schema(implementation = BaseResponse.class))),
+            @ApiResponse(responseCode = "404", description = CommonConstant.NOT_FOUND,
                     content = @Content(mediaType = MediaType.APPLICATION_JSON_VALUE,
-                            schema = @Schema(implementation = MessageResponse.class))),
+                            schema = @Schema(implementation = BaseResponse.class))),
             @ApiResponse(responseCode = "500", description = "Internal Server Error",
                     content = @Content(mediaType = MediaType.APPLICATION_JSON_VALUE,
-                            schema = @Schema(implementation = MessageResponse.class)))
+                            schema = @Schema(implementation = BaseResponse.class)))
     })
-    @PostMapping(value = "/upload-tugas-akhir", consumes = MediaType.MULTIPART_FORM_DATA_VALUE)
-    public ResponseEntity<TugasAkhirResponse> uploadTugasAkhir(
+    @PostMapping(value = "/final-projects", consumes = MediaType.MULTIPART_FORM_DATA_VALUE)
+    public ResponseEntity<BaseResponse> uploadTugasAkhir(
             @Parameter(description = "ID Dosen sesuai dengan SK", example = "123")
-            @NotBlank(message = "dosenId cannot be null")
-            @RequestParam("dosenId") Integer dosenId,
+            @NotNull(message = "dosenId cannot be null")
+            @RequestParam("dosenId") String dosenId,
             @Parameter(description = "ID program sesuai dengan yang diikuti", example = "123")
             @RequestParam("programId") Integer programId,
             @Parameter(description = "File sertifikat")
@@ -95,10 +91,10 @@ public class TugasAkhirController {
             Dosen dosen = dosenService.getDosenByDosenId(dosenId);
             Program program = programService.findByProgramid(programId);
             if (dosen == null) {
-                return new ResponseEntity(new MessageResponse("Dosen Not Found"), HttpStatus.NOT_FOUND);
+                return ResponseUtil.error(HttpStatus.NOT_FOUND, DOSEN_NOT_FOUND);
             }
             if (program == null) {
-                return new ResponseEntity(new MessageResponse("Program MBKM Not Found"), HttpStatus.NOT_FOUND);
+                return ResponseUtil.error(HttpStatus.NOT_FOUND, PROGRAM_MBKM_NOT_FOUND);
             }
             LocalDateTime currentTime = LocalDateTime.now();
             ta.setUserId(users);
@@ -111,9 +107,9 @@ public class TugasAkhirController {
             ta.setVerifikasi(null);
             ta.setWaktuPengumpulan(Timestamp.valueOf(currentTime));
             tugasAkhirService.saveTugasAkhir(ta);
-            return new ResponseEntity<>(new TugasAkhirResponse(ta), HttpStatus.OK);
+            return ResponseUtil.ok(new TugasAkhirResponse(ta));
         } catch (IOException e) {
-            return new ResponseEntity(new MessageResponse("Internal Server Error"), HttpStatus.INTERNAL_SERVER_ERROR);
+            return ResponseUtil.error(HttpStatus.INTERNAL_SERVER_ERROR, "Internal Server Error");
         }
     }
 
@@ -121,21 +117,20 @@ public class TugasAkhirController {
     @ApiResponses(value = {
             @ApiResponse(responseCode = "200", description = "Successfully",
                     content = @Content(mediaType = MediaType.APPLICATION_JSON_VALUE,
-                            schema = @Schema(implementation = TugasAkhirResponse.class))),
-            @ApiResponse(responseCode = "404", description = "Not Found",
+                            schema = @Schema(implementation = BaseResponse.class))),
+            @ApiResponse(responseCode = "404", description = CommonConstant.NOT_FOUND,
                     content = @Content(mediaType = MediaType.APPLICATION_JSON_VALUE,
-                            schema = @Schema(implementation = MessageResponse.class))),
-            @ApiResponse(responseCode = "403", description = "Akses Ditolak",
+                            schema = @Schema(implementation = BaseResponse.class))),
+            @ApiResponse(responseCode = "403", description = AKSES_DITOLAK,
                     content = @Content(mediaType = MediaType.APPLICATION_JSON_VALUE,
-                            schema = @Schema(implementation = MessageResponse.class))),
+                            schema = @Schema(implementation = BaseResponse.class))),
             @ApiResponse(responseCode = "500", description = "Internal Server Error",
                     content = @Content(mediaType = MediaType.APPLICATION_JSON_VALUE,
-                            schema = @Schema(implementation = MessageResponse.class)))
+                            schema = @Schema(implementation = BaseResponse.class)))
     })
-    @PutMapping(value = "/update-tugas-akhir/{tugasAkhirId}", consumes = MediaType.MULTIPART_FORM_DATA_VALUE)
-    public ResponseEntity<TugasAkhirResponse> updateTugasAkhir(
-            @Parameter(description = "ID tugas akhir yang diupdate", example = "123")
-            @PathVariable("tugasAkhirId") Integer tugasAkhirId,
+    @PutMapping(value = "/final-projects/{tugasAkhirId}", consumes = MediaType.MULTIPART_FORM_DATA_VALUE)
+    public ResponseEntity<BaseResponse> updateTugasAkhir(
+            @PathVariable @Parameter(description = "ID tugas akhir yang diupdate", example = "123") Integer tugasAkhirId,
             @Parameter(description = "ID program yang ingin diupdate", example = "123")
             @RequestParam("programId") Integer programId,
             @Parameter(description = "File sertifikat")
@@ -153,14 +148,14 @@ public class TugasAkhirController {
             TugasAkhir ta = tugasAkhirService.findByTugasAkhirId(tugasAkhirId);
             Program program = programService.findByProgramid(programId);
             if (ta == null) {
-                return new ResponseEntity(new MessageResponse(" Tugas Akhir Not Found"), HttpStatus.NOT_FOUND);
+                return ResponseUtil.error(HttpStatus.NOT_FOUND, TUGAS_AKHIR_NOT_FOUND);
             }
             if (program == null) {
-                return new ResponseEntity(new MessageResponse(" Program MBKM Not Found"), HttpStatus.NOT_FOUND);
+                return ResponseUtil.error(HttpStatus.NOT_FOUND, PROGRAM_MBKM_NOT_FOUND);
             }
             Users users = usersService.findByUsername(authentication.getName());
             if (!ta.getUserId().getUserId().equals(users.getUserId())) {
-                return new ResponseEntity(new MessageResponse(AKSES_DITOLAK), HttpStatus.FORBIDDEN);
+                return ResponseUtil.error(HttpStatus.FORBIDDEN, AKSES_DITOLAK);
             }
             if (sertifikat != null) {
                 ta.setSertifikat(sertifikat.getBytes());
@@ -177,9 +172,9 @@ public class TugasAkhirController {
             ta.setProgramId(program);
             ta.setWaktuUpdate(Timestamp.valueOf(currentTime));
             tugasAkhirService.saveTugasAkhir(ta);
-            return new ResponseEntity<>(new TugasAkhirResponse(ta), HttpStatus.OK);
+            return ResponseUtil.ok(new TugasAkhirResponse(ta));
         } catch (IOException e) {
-            return new ResponseEntity(new MessageResponse("Internal Server Error"), HttpStatus.INTERNAL_SERVER_ERROR);
+            return ResponseUtil.error(HttpStatus.INTERNAL_SERVER_ERROR, "Internal Server Error");
         }
     }
 
@@ -187,175 +182,49 @@ public class TugasAkhirController {
     @ApiResponses(value = {
             @ApiResponse(responseCode = "200", description = "Successfully",
                     content = @Content(mediaType = MediaType.APPLICATION_JSON_VALUE,
-                            schema = @Schema(implementation = TugasAkhirResponse.class))),
-            @ApiResponse(responseCode = "404", description = "Not Found",
+                            schema = @Schema(implementation = BaseResponse.class))),
+            @ApiResponse(responseCode = "404", description = CommonConstant.NOT_FOUND,
                     content = @Content(mediaType = MediaType.APPLICATION_JSON_VALUE,
-                            schema = @Schema(implementation = MessageResponse.class))),
-            @ApiResponse(responseCode = "403", description = "Akses Ditolak",
+                            schema = @Schema(implementation = BaseResponse.class))),
+            @ApiResponse(responseCode = "403", description = AKSES_DITOLAK,
                     content = @Content(mediaType = MediaType.APPLICATION_JSON_VALUE,
-                            schema = @Schema(implementation = MessageResponse.class)))
+                            schema = @Schema(implementation = BaseResponse.class)))
     })
-    @GetMapping("/detail-tugas-akhir/{tugasAkhirId}")
-    public ResponseEntity<TugasAkhirGetDetailResponse> getTugasAkhirByid(
-            @Parameter(description = "ID tugas akhir ")
-            @PathVariable("tugasAkhirId") Integer tugasAkhirId,
+    @GetMapping("/final-projects/{tugasAkhirId}")
+    public ResponseEntity<BaseResponse> getTugasAkhirByid(
+            @PathVariable @Parameter(description = "ID tugas akhir ") Integer tugasAkhirId,
             Authentication authentication) {
         TugasAkhir ta = tugasAkhirService.findByTugasAkhirId(tugasAkhirId);
         if (ta == null) {
-            return new ResponseEntity(new MessageResponse("Tugas Akhir Not Found"), HttpStatus.NOT_FOUND);
+            return ResponseUtil.error(HttpStatus.NOT_FOUND, TUGAS_AKHIR_NOT_FOUND);
         }
         Users users = usersService.findByUsername(authentication.getName());
         if (ta.getUserId().getUserId().equals(users.getUserId())) {
-            return new ResponseEntity<>(new TugasAkhirGetDetailResponse(ta), HttpStatus.OK);
+            return ResponseUtil.ok(new TugasAkhirGetDetailResponse(ta));
         } else
-            return new ResponseEntity(new MessageResponse(AKSES_DITOLAK), HttpStatus.FORBIDDEN);
+            return ResponseUtil.error(HttpStatus.FORBIDDEN, AKSES_DITOLAK);
     }
 
     @Operation(summary = "menampilkan daftar laporan sesuai season login ")
     @ApiResponses(value = {
             @ApiResponse(responseCode = "200", description = "Successfully",
                     content = @Content(mediaType = MediaType.APPLICATION_JSON_VALUE,
-                            schema = @Schema(implementation = TugasAkhirResponse.class))),
-            @ApiResponse(responseCode = "404", description = "Not Found",
+                            schema = @Schema(implementation = BaseResponse.class))),
+            @ApiResponse(responseCode = "404", description = CommonConstant.NOT_FOUND,
                     content = @Content(mediaType = MediaType.APPLICATION_JSON_VALUE,
-                            schema = @Schema(implementation = MessageResponse.class))),
+                            schema = @Schema(implementation = BaseResponse.class))),
     })
-    @GetMapping("/list-tugas-akhir")
-    public ResponseEntity<TugasAkhirResponse> getTugasAkhirByUserId(
+    @GetMapping("/final-projects/me")
+    public ResponseEntity<BaseResponse> getTugasAkhirByUserId(
             Authentication authentication) {
         Users users = usersService.findByUsername(authentication.getName());
         List<TugasAkhir> ta = tugasAkhirService.getTugasAkhirByUserId(users.getUserId());
         if (ta == null) {
-            return new ResponseEntity(new MessageResponse("Tugas Akhir Not Found"), HttpStatus.NOT_FOUND);
+            return ResponseUtil.error(HttpStatus.NOT_FOUND, TUGAS_AKHIR_NOT_FOUND);
         }
         List<TugasAkhirResponse> taGetResponse =
-                ta.stream().map(TugasAkhirResponse::new).collect(Collectors.toList());
+                ta.stream().map(TugasAkhirResponse::new).toList();
 
-        return new ResponseEntity(taGetResponse, HttpStatus.OK);
+        return ResponseUtil.ok(taGetResponse);
     }
-
-//    @Operation(summary = "menampilkan file sertifikat")
-//    @GetMapping("/sertifikat/{tugasAkhirId}")
-//    public ResponseEntity<Resource> displayFileSertifikat(
-//            @PathVariable Integer tugasAkhirId,
-//            Authentication authentication) {
-//        TugasAkhir ta = tugasAkhirService.findByTugasAkhirId(tugasAkhirId);
-//        Users users = usersService.findByUsername(authentication.getName());
-//        if (ta.getUserId().getUserId().equals(users.getUserId())) {
-//            Optional<TugasAkhir> optionalDocument = Optional.ofNullable(tugasAkhirService.findByTugasAkhirId(tugasAkhirId));
-//            if (optionalDocument.isPresent()) {
-//                TugasAkhir tugasAkhir = optionalDocument.get();
-//                byte[] fileBytes = tugasAkhir.getSertifikat();
-//
-//                ByteArrayResource resource = new ByteArrayResource(fileBytes);
-//                HttpHeaders headers = new HttpHeaders();
-//                headers.add(HttpHeaders.CONTENT_DISPOSITION, "attachment; filename=sertifikat.pdf");
-//
-//                return ResponseEntity.ok()
-//                        .headers(headers)
-//                        .contentLength(fileBytes.length)
-//                        .contentType(MediaType.APPLICATION_PDF)
-//                        .body(resource);
-//            } else {
-//                return ResponseEntity.notFound().build();
-//            }
-//        } else {
-//            return new ResponseEntity(AKSES_DITOLAK, HttpStatus.PROXY_AUTHENTICATION_REQUIRED);
-//        }
-//
-//    }
-//
-//    @Operation(summary = "menampilkan file nilai")
-//    @GetMapping("/nilai/{tugasAkhirId}")
-//    public ResponseEntity<Resource> displayFileNilai(
-//            @PathVariable Integer tugasAkhirId,
-//            Authentication authentication) {
-//        TugasAkhir ta = tugasAkhirService.findByTugasAkhirId(tugasAkhirId);
-//        Users users = usersService.findByUsername(authentication.getName());
-//        if (ta.getUserId().getUserId().equals(users.getUserId())) {
-//            Optional<TugasAkhir> optionalDocument = Optional.ofNullable(tugasAkhirService.findByTugasAkhirId(tugasAkhirId));
-//            if (optionalDocument.isPresent()) {
-//                TugasAkhir tugasAkhir = optionalDocument.get();
-//                byte[] fileBytes = tugasAkhir.getNilai();
-//
-//                ByteArrayResource resource = new ByteArrayResource(fileBytes);
-//                HttpHeaders headers = new HttpHeaders();
-//                headers.add(HttpHeaders.CONTENT_DISPOSITION, "attachment; filename=nilai.pdf");
-//
-//                return ResponseEntity.ok()
-//                        .headers(headers)
-//                        .contentLength(fileBytes.length)
-//                        .contentType(MediaType.APPLICATION_PDF)
-//                        .body(resource);
-//            } else {
-//                return ResponseEntity.notFound().build();
-//            }
-//        } else {
-//            return new ResponseEntity(AKSES_DITOLAK, HttpStatus.PROXY_AUTHENTICATION_REQUIRED);
-//        }
-//
-//    }
-//
-//    @Operation(summary = "menampilkan file Lembar Pengesahan")
-//    @GetMapping("/lembar-pengesahan/{tugasAkhirId}")
-//    public ResponseEntity<Resource> displayFileLembarPengesahan(
-//            @PathVariable Integer tugasAkhirId,
-//            Authentication authentication) {
-//        TugasAkhir ta = tugasAkhirService.findByTugasAkhirId(tugasAkhirId);
-//        Users users = usersService.findByUsername(authentication.getName());
-//        if (ta.getUserId().getUserId().equals(users.getUserId())) {
-//            Optional<TugasAkhir> optionalDocument = Optional.ofNullable(tugasAkhirService.findByTugasAkhirId(tugasAkhirId));
-//            if (optionalDocument.isPresent()) {
-//                TugasAkhir tugasAkhir = optionalDocument.get();
-//                byte[] fileBytes = tugasAkhir.getLembarPengesahan();
-//
-//                ByteArrayResource resource = new ByteArrayResource(fileBytes);
-//                HttpHeaders headers = new HttpHeaders();
-//                headers.add(HttpHeaders.CONTENT_DISPOSITION, "attachment; filename=lembarPengesahan.pdf");
-//
-//                return ResponseEntity.ok()
-//                        .headers(headers)
-//                        .contentLength(fileBytes.length)
-//                        .contentType(MediaType.APPLICATION_PDF)
-//                        .body(resource);
-//            } else {
-//                return ResponseEntity.notFound().build();
-//            }
-//        } else {
-//            return new ResponseEntity(AKSES_DITOLAK, HttpStatus.PROXY_AUTHENTICATION_REQUIRED);
-//        }
-//
-//    }
-//
-//    @Operation(summary = "menampilkan file Laporan Tugas Akhir")
-//    @GetMapping("/laporan-tugas-akhir/{tugasAkhirId}")
-//    public ResponseEntity<Resource> displayFileTugasAkhir(
-//            @PathVariable Integer tugasAkhirId,
-//            Authentication authentication) {
-//        TugasAkhir ta = tugasAkhirService.findByTugasAkhirId(tugasAkhirId);
-//        Users users = usersService.findByUsername(authentication.getName());
-//        if (ta.getUserId().getUserId().equals(users.getUserId())) {
-//            Optional<TugasAkhir> optionalDocument = Optional.ofNullable(tugasAkhirService.findByTugasAkhirId(tugasAkhirId));
-//            if (optionalDocument.isPresent()) {
-//                TugasAkhir tugasAkhir = optionalDocument.get();
-//                byte[] fileBytes = tugasAkhir.getLaporanTugasAkhir();
-//
-//                ByteArrayResource resource = new ByteArrayResource(fileBytes);
-//                HttpHeaders headers = new HttpHeaders();
-//                headers.add(HttpHeaders.CONTENT_DISPOSITION, "attachment; filename=TugasAkhir.pdf");
-//
-//                return ResponseEntity.ok()
-//                        .headers(headers)
-//                        .contentLength(fileBytes.length)
-//                        .contentType(MediaType.APPLICATION_PDF)
-//                        .body(resource);
-//            } else {
-//                return ResponseEntity.notFound().build();
-//            }
-//        } else {
-//            return new ResponseEntity(AKSES_DITOLAK, HttpStatus.PROXY_AUTHENTICATION_REQUIRED);
-//        }
-//    }
 }
-
-
