@@ -1,12 +1,14 @@
 package com.fasilkom.pengumpulmbkm.controller;
 
+import com.fasilkom.pengumpulmbkm.util.CommonConstant;
+import com.fasilkom.pengumpulmbkm.model.response.BaseResponse;
 import com.fasilkom.pengumpulmbkm.model.response.DosenResponse;
-import com.fasilkom.pengumpulmbkm.model.response.MessageResponse;
 import com.fasilkom.pengumpulmbkm.model.response.UsersResponse;
 import com.fasilkom.pengumpulmbkm.model.users.Dosen;
 import com.fasilkom.pengumpulmbkm.model.users.Users;
 import com.fasilkom.pengumpulmbkm.service.DosenService;
 import com.fasilkom.pengumpulmbkm.service.UsersService;
+import com.fasilkom.pengumpulmbkm.util.ResponseUtil;
 import io.swagger.v3.oas.annotations.Operation;
 import io.swagger.v3.oas.annotations.Parameter;
 import io.swagger.v3.oas.annotations.media.Content;
@@ -14,7 +16,7 @@ import io.swagger.v3.oas.annotations.media.Schema;
 import io.swagger.v3.oas.annotations.responses.ApiResponse;
 import io.swagger.v3.oas.annotations.responses.ApiResponses;
 import io.swagger.v3.oas.annotations.tags.Tag;
-import org.springframework.beans.factory.annotation.Autowired;
+import lombok.RequiredArgsConstructor;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.MediaType;
 import org.springframework.http.ResponseEntity;
@@ -22,47 +24,47 @@ import org.springframework.security.core.Authentication;
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.web.bind.annotation.*;
 
-import javax.validation.constraints.Size;
+import jakarta.validation.constraints.Size;
 import java.util.List;
-import java.util.stream.Collectors;
 
-import static com.fasilkom.pengumpulmbkm.model.Info.*;
+import static com.fasilkom.pengumpulmbkm.util.CommonConstant.*;
 
 @Tag(name = "3. Users", description = "API yang dapat digunakan oleh akun yang memiliki role ADMIN, MAHASISWA, DOSEN")
 @RestController
-@RequestMapping("/users")
+@RequiredArgsConstructor
+@RequestMapping("/api/v1")
 public class UsersController {
-    @Autowired
-    PasswordEncoder passwordEncoder;
-    @Autowired
-    private UsersService usersService;
-    @Autowired
-    private DosenService dosenService;
+
+    private final PasswordEncoder passwordEncoder;
+
+    private final UsersService usersService;
+
+    private final DosenService dosenService;
 
     @Operation(summary = "Mendapatkan detail profil untuk user")
     @ApiResponses(value = {
             @ApiResponse(responseCode = "200", description = "Successfully",
                     content = @Content(mediaType = MediaType.APPLICATION_JSON_VALUE,
-                            schema = @Schema(implementation = UsersResponse.class))),
+                            schema = @Schema(implementation = BaseResponse.class))),
     })
-    @GetMapping(value = "/profil")
-    public ResponseEntity<UsersResponse> getDetailUser(
+    @GetMapping(value = "/users/me")
+    public ResponseEntity<BaseResponse> getDetailUser(
             Authentication authentication) {
         Users users = usersService.findByUsername(authentication.getName());
-        return new ResponseEntity<>(new UsersResponse(users), HttpStatus.OK);
+        return ResponseUtil.ok(new UsersResponse(users));
     }
 
     @Operation(summary = "melakukan update password untuk user")
     @ApiResponses(value = {
             @ApiResponse(responseCode = "200", description = "Successfully",
                     content = @Content(mediaType = MediaType.APPLICATION_JSON_VALUE,
-                            schema = @Schema(implementation = MessageResponse.class))),
+                            schema = @Schema(implementation = BaseResponse.class))),
             @ApiResponse(responseCode = "400", description = "Bad Request",
                     content = @Content(mediaType = MediaType.APPLICATION_JSON_VALUE,
-                            schema = @Schema(implementation = MessageResponse.class))),
+                            schema = @Schema(implementation = BaseResponse.class))),
     })
-    @PostMapping("/update-users-password")
-    public ResponseEntity<ResponseEntity> updateUsersPassword(
+    @PutMapping("/users/me/password")
+    public ResponseEntity<BaseResponse> updateUsersPassword(
             @Parameter(description = "Password lama")
             @RequestParam("old_password") String oldPassword,
             @Parameter(description = "Masukan Password baru")
@@ -75,12 +77,12 @@ public class UsersController {
         if (password.equals(retypePassword)) {
             if (passwordEncoder.matches(oldPassword, users.getPassword())) {
                 usersService.updateUsersPassword(password, user.getUserId());
-                return new ResponseEntity(new MessageResponse(PASSWORD_TERGANTI), HttpStatus.OK);
+                return ResponseUtil.ok(PASSWORD_TERGANTI, null);
             } else
-                return new ResponseEntity(new MessageResponse(SALAH_PASSWORD), HttpStatus.BAD_REQUEST);
+                return ResponseUtil.error(HttpStatus.BAD_REQUEST, SALAH_PASSWORD);
 
         } else
-            return new ResponseEntity(new MessageResponse(PASSWORD_SAMA), HttpStatus.BAD_REQUEST);
+            return ResponseUtil.error(HttpStatus.BAD_REQUEST, PASSWORD_SAMA);
     }
 
 
@@ -88,13 +90,13 @@ public class UsersController {
     @ApiResponses(value = {
             @ApiResponse(responseCode = "200", description = "Successfully",
                     content = @Content(mediaType = MediaType.APPLICATION_JSON_VALUE,
-                            schema = @Schema(implementation = MessageResponse.class))),
+                            schema = @Schema(implementation = BaseResponse.class))),
             @ApiResponse(responseCode = "400", description = "Bad Request",
                     content = @Content(mediaType = MediaType.APPLICATION_JSON_VALUE,
-                            schema = @Schema(implementation = MessageResponse.class))),
+                            schema = @Schema(implementation = BaseResponse.class))),
     })
-    @PostMapping("/update-users-profile")
-    public ResponseEntity<MessageResponse> updateUsersProfile(
+    @PutMapping("/users/me")
+    public ResponseEntity<BaseResponse> updateUsersProfile(
             @Parameter(description = "masukan nomor handphone", example = "082009296186")
             @RequestParam("noHp") String noHp,
             @Parameter(description = "masukan nama lengkap", example = "Lena VonRueden")
@@ -112,9 +114,9 @@ public class UsersController {
             users.setNoHp(noHp);
             users.setNpm(npm);
             usersService.updateProfile(users);
-            return new ResponseEntity(new MessageResponse(UPDATE_BERHASIL), HttpStatus.OK);
+            return ResponseUtil.ok(UPDATE_BERHASIL, null);
         } else
-            return new ResponseEntity(new MessageResponse(SALAH_PASSWORD), HttpStatus.BAD_REQUEST);
+            return ResponseUtil.error(HttpStatus.BAD_REQUEST, SALAH_PASSWORD);
 
     }
 
@@ -122,33 +124,32 @@ public class UsersController {
     @ApiResponses(value = {
             @ApiResponse(responseCode = "200", description = "Successfully",
                     content = @Content(mediaType = MediaType.APPLICATION_JSON_VALUE,
-                            schema = @Schema(implementation = DosenResponse.class)))
+                            schema = @Schema(implementation = BaseResponse.class)))
     })
-    @GetMapping(value = "/all-dosen")
-    public ResponseEntity<List<DosenResponse>> getAllDosen() {
+    @GetMapping(value = "/lecturers")
+    public ResponseEntity<BaseResponse> getAllDosen() {
         List<Dosen> dosen = dosenService.getAllDosen();
         List<DosenResponse> allDosen =
-                dosen.stream().map(DosenResponse::new).collect(Collectors.toList());
-        return new ResponseEntity<>(allDosen, HttpStatus.OK);
+                dosen.stream().map(DosenResponse::new).toList();
+        return ResponseUtil.ok(allDosen);
     }
 
     @Operation(summary = "mendapatkan detail dosen sesuai dengan id dosen")
     @ApiResponses(value = {
             @ApiResponse(responseCode = "200", description = "Successfully",
                     content = @Content(mediaType = MediaType.APPLICATION_JSON_VALUE,
-                            schema = @Schema(implementation = DosenResponse.class))),
-            @ApiResponse(responseCode = "404", description = "Not Found",
+                            schema = @Schema(implementation = BaseResponse.class))),
+            @ApiResponse(responseCode = "404", description = CommonConstant.NOT_FOUND,
                     content = @Content(mediaType = MediaType.APPLICATION_JSON_VALUE,
-                            schema = @Schema(implementation = MessageResponse.class))),
+                            schema = @Schema(implementation = BaseResponse.class))),
     })
-    @GetMapping(value = "/detail-profil-dosen/{dosenId}")
-    public ResponseEntity<DosenResponse> getDetailDosenByDosenId(
-            @Parameter(description = "ID dosen untuk menampilkan detail", example = "123")
-            @PathVariable("dosenId") Integer dosenId) {
+    @GetMapping(value = "/lecturers/{dosenId}")
+    public ResponseEntity<BaseResponse> getDetailDosenByDosenId(
+            @PathVariable @Parameter(description = "ID dosen untuk menampilkan detail", example = "123") String dosenId) {
         Dosen dosen = dosenService.getDosenByDosenId(dosenId);
         if (dosen == null) {
-            return new ResponseEntity(new MessageResponse("Not Found"), HttpStatus.NOT_FOUND);
+            return ResponseUtil.error(HttpStatus.NOT_FOUND, CommonConstant.NOT_FOUND);
         }
-        return new ResponseEntity<>(new DosenResponse(dosen), HttpStatus.OK);
+        return ResponseUtil.ok(new DosenResponse(dosen));
     }
 }
